--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -12,7 +12,7 @@ localAPIEndpoint:
   advertiseAddress: {{ .MyIP }}
   bindPort: 6443
 nodeRegistration:
-  criSocket: /var/run/dockershim.sock
+  criSocket: /run/containerd/containerd.sock
   kubeletExtraArgs:
     cloud-provider: aws
   name: {{ .NodeName }}
