--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -1,4 +1,4 @@
-apiVersion: kubeadm.k8s.io/v1beta2
+apiVersion: kubeadm.k8s.io/v1beta3
 bootstrapTokens:
 - groups:
   - system:bootstrappers:kubeadm:default-node-token
@@ -15,10 +15,8 @@ nodeRegistration:
   criSocket: /run/containerd/containerd.sock
   kubeletExtraArgs:
     cloud-provider: aws
+  imagePullPolicy: IfNotPresent
   name: {{ .NodeName }}
-  taints:
-  - effect: NoSchedule
-    key: node-role.kubernetes.io/master
 ---
 apiServer:
   certSANs:
@@ -29,7 +27,7 @@ apiServer:
     external-hostname: {{ .APIServer }}
     service-account-jwks-uri: https://kubernetes.default.svc.{{ .ClusterDomain }}/openid/v1/jwks
   timeoutForControlPlane: 4m0s
-apiVersion: kubeadm.k8s.io/v1beta2
+apiVersion: kubeadm.k8s.io/v1beta3
 certificatesDir: /etc/kubernetes/pki
 clusterName: kubernetes
 controlPlaneEndpoint: {{ .APIServer }}:{{ .APIPort }}
@@ -55,8 +53,6 @@ controllerManager:
     mountPath: /lib64/ld-linux-x86-64.so.2
     readOnly: true
     pathType: File
-dns:
-  type: CoreDNS
 {{- if eq .EtcdMode "stacked" }}
 etcd:
   local:
