Add conditional to Ansible task when deleting a stack
The task to suspend processes failed if the auto scaling group was already
deleted, so this fixes it so that it skips the task instead.

--- a/stack/ansible/keights-stack/tasks/absent.yml
+++ b/stack/ansible/keights-stack/tasks/absent.yml
@@ -46,6 +46,7 @@
     suspend_processes:
     - HealthCheck
     - ReplaceUnhealthy
+  when: instances_to_terminate.results | length != 0
 
 - name: terminate instances for detaching etcd volumes
   amazon.aws.ec2:
