--- a/stack/ansible/keights-stack/tasks/present.yml
+++ b/stack/ansible/keights-stack/tasks/present.yml
@@ -50,6 +50,13 @@
   ansible.builtin.assert:
     that: keights_stack.masters.subnet_ids | length in (1, 3)
     msg: 'expected to be given 1 or 3 master subnet ids, got {{ keights_stack.masters.subnet_ids | length }}'
+  when: etcd_mode == 'stacked'
+
+- name: assert the correct number of etcd subnet ids
+  ansible.builtin.assert:
+    that: keights_stack.etcd.subnet_ids | length in (1, 3)
+    msg: 'expected to be given 1 or 3 etcd subnet ids, got {{ keights_stack.etcd.subnet_ids | length }}'
+  when: etcd_mode == 'external'
 
 - name: assert valid value for create_iam_resources
   ansible.builtin.assert:
