Pass apiserver into instances from CloudFormation
Kube-router needs to communicate with the apiserver on the load balancer when
`replace_kube_proxy: true`. This writes the DNS name of the load balancer to a
file on all instances so it can be mounted as a volume for kube-router. An init
container uses the value from the file to expand a kubeconfig template
placeholder.

This also modifies the kube-router manifest to store the kubeconfig template in a
ConfigMap instead of writing it with a shell heredoc.

--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -219,6 +219,11 @@ Resources:
             - |
               #cloud-config
               write_files:
+              - path: /etc/kubernetes/apiserver
+                owner: root:root
+                permissions: '0644'
+                content: ${LoadBalancerDnsName}
+
               - path: /etc/keights/kubeadm-join-config.yaml.template
                 owner: root:root
                 permissions: '0644'
