Use crictl config file
Instead of setting the containerd socket for crictl with an environment
variable, use /etc/crictl.yaml. This is more explicit and doesn't depend
on the shell sourcing in /etc/profile.d/crictl.sh.

--- a/stack/ami/debian/playbook.yml
+++ b/stack/ami/debian/playbook.yml
@@ -148,7 +148,7 @@
       loop:
         - path: etc/apt/sources.list.d/kubernetes.list
           mode: '0644'
-        - path: etc/profile.d/crictl.sh
+        - path: etc/crictl.yaml
           mode: '0644'
 
     - name: expand templates into chroot
