--- a/ci/assets/v1.21-stacked/cluster/requirements.txt
+++ b/ci/assets/v1.21-stacked/cluster/requirements.txt
@@ -1,36 +1,37 @@
-ansible==4.1.0
-ansible-core==2.11.2
+ansible==4.7.0
+ansible-core==2.11.6
 boto==2.49.0
-boto3==1.17.98
-botocore==1.20.98
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.5
+boto3==1.19.7
+botocore==1.22.7
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
-cryptography==3.4.7
-google-auth==1.32.0
-idna==2.10
-Jinja2==3.0.1
+charset-normalizer==2.0.7
+cryptography==35.0.0
+google-auth==2.3.2
+idna==3.3
+Jinja2==3.0.2
 jmespath==0.10.0
 kubernetes==12.0.1
 MarkupSafe==2.0.1
 oauthlib==3.1.1
 openshift==0.12.0
-packaging==20.9
+packaging==21.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pyparsing==2.4.7
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 python-string-utils==1.0.0
-PyYAML==5.4.1
-requests==2.25.1
+PyYAML==6.0
+requests==2.26.0
 requests-oauthlib==1.3.0
 resolvelib==0.5.4
 rsa==4.7.2
-ruamel.yaml==0.17.9
-ruamel.yaml.clib==0.2.2
-s3transfer==0.4.2
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+s3transfer==0.5.0
 six==1.16.0
-urllib3==1.26.5
-websocket-client==1.1.0
+urllib3==1.26.7
+websocket-client==1.2.1
