--- a/ci/tasks/run-e2e.yml
+++ b/ci/tasks/run-e2e.yml
@@ -15,7 +15,7 @@ outputs:
 - name: artifacts-out
 
 params:
-  SONOBUOY_URL: https://github.com/vmware-tanzu/sonobuoy/releases/download/v0.53.0/sonobuoy_0.53.0_linux_amd64.tar.gz
+  SONOBUOY_URL: https://github.com/vmware-tanzu/sonobuoy/releases/download/v0.54.0/sonobuoy_0.54.0_linux_amd64.tar.gz
   KUBECTL_URL: https://storage.googleapis.com/kubernetes-release/release/v1.20.0/bin/linux/amd64/kubectl
   KUBECONFIG: artifacts-in/kubeconfig
   CNI_PLUGIN_DAEMONSET: kube-router
@@ -54,10 +54,10 @@ run:
 
     echo -n 'Checking e2e results...'
     results=`sonobuoy retrieve artifacts-out`
-    failed=`sonobuoy e2e ${results} | awk '/failed tests:/{print $3}'`
+    failed=`sonobuoy results ${results} --plugin e2e | awk '/Failed:/{print $2}'`
     if [ "${failed}" != 0 ]; then
         echo ' error:'
-        sonobuoy e2e ${results}
+        sonobuoy results ${results} --plugin e2e
         exit 1
     fi
     echo ' all tests passed'
