--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -17,6 +17,9 @@ nodeRegistration:
     cloud-provider: aws
   imagePullPolicy: IfNotPresent
   name: {{ .NodeName }}
+  taints:
+  - effect: NoSchedule
+    key: node-role.kubernetes.io/master
 ---
 apiServer:
   certSANs:
@@ -53,6 +56,7 @@ controllerManager:
     mountPath: /lib64/ld-linux-x86-64.so.2
     readOnly: true
     pathType: File
+dns: {}
 {{- if eq .EtcdMode "stacked" }}
 etcd:
   local:
@@ -99,6 +103,7 @@ networking:
   dnsDomain: {{ .ClusterDomain }}
   podSubnet: {{ .PodSubnet }}
   serviceSubnet: {{ .ServiceSubnet }}
+scheduler: {}
 ---
 apiVersion: kubeproxy.config.k8s.io/v1alpha1
 clusterCIDR: {{ .PodSubnet }}
