--- a/stack/ansible/keights-stack/tasks/absent.yml
+++ b/stack/ansible/keights-stack/tasks/absent.yml
@@ -49,7 +49,7 @@
   when: instances_to_terminate.results | length != 0
 
 - name: terminate instances for detaching etcd volumes
-  amazon.aws.ec2:
+  amazon.aws.ec2_instance:
     instance_ids: '{{ item.instances | map(attribute="instance_id") | list }}'
     state: absent
     wait: true
