--- a/ci/assets/verify-network.yml
+++ b/ci/assets/verify-network.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: verify-network
-        image: busybox:1.30.1
+        image: ghcr.io/cloudboss/docker.io/library/busybox:1.30.1
         command: ['nc']
         args: ['-z', 'kubernetes', '443']
       restartPolicy: OnFailure
