--- a/ci/tasks/s3-upload.yml
+++ b/ci/tasks/s3-upload.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: cloudboss.jfrog.io/containers/python
+    repository: ghcr.io/cloudboss/docker.io/library/python
     tag: '3.9.2-alpine'
 
 inputs:
