Update path to containerd socket in kubeadm config

--- a/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
+++ b/keights/resources/usr/share/keights/kubeadm-init-config.yaml.template
@@ -12,7 +12,7 @@ localAPIEndpoint:
   advertiseAddress: {{ .MyIP }}
   bindPort: 6443
 nodeRegistration:
-  criSocket: /run/containerd/containerd.sock
+  criSocket: unix:///run/containerd/containerd.sock
   kubeletExtraArgs:
     cloud-provider: aws
   imagePullPolicy: IfNotPresent
