--- a/ci/tasks/make-keights.yml
+++ b/ci/tasks/make-keights.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: ghcr.io/cloudboss/docker.io/library/golang
-    tag: '1.17.8'
+    tag: '1.19.0-bullseye'
 
 inputs:
 - name: repo
